@@ -4,6 +4,11 @@ Revision history for SPVM
         [CHANGE]
         * Add build_shared_lib_dist_precompile to SPVM::Builder::API
         * Add build_shared_lib_dist_native to SPVM::Builder::API
+        * Add build_dir option to new method of SPVM::Builder::API.
+
+        [NON BACKWORD COMPATIBLE CHANGES]
+        * create_make_rule_native of SPVM::Builder::Util::API doesn't use private API.
+        * create_make_rule_precompile of SPVM::Builder::Util::API doesn't use private API.
 
 0.9130  2021-01-27
         [CHANGE]
